From bitcoin/bitcoin #220 plus my changes for mini private keys

--- a/src/makefile.linux-mingw
+++ b/src/makefile.linux-mingw
@@ -81,7 +81,8 @@ OBJS= \
     obj/util.o \
     obj/wallet.o \
     cryptopp/obj/sha.o \
-    cryptopp/obj/cpu.o
+    cryptopp/obj/cpu.o \
+    cryptopp/obj/pbkdf2.o
 
 
 all: bitcoin.exe
