--- a/src/makefile.vc
+++ b/src/makefile.vc
@@ -83,7 +83,8 @@ OBJS= \
     obj\util.o \
     obj\wallet.o \
     cryptopp\obj\sha.o \
-    cryptopp\obj\cpu.o
+    cryptopp\obj\cpu.o \
+    cryptopp\obj\pbkdf2.o
 
 CRYPTOPP_OBJS= \
     cryptopp\obj\sha.obj \
