--- a/src/makefile.osx
+++ b/src/makefile.osx
@@ -65,12 +65,15 @@ OBJS= \
     obj/main.o \
     obj/net.o \
     obj/protocol.o \
+    obj/wallet.o \
+    obj/rpcdump.o \
     obj/rpc.o \
     obj/script.o \
     obj/util.o \
     obj/wallet.o \
     cryptopp/obj/sha.o \
-    cryptopp/obj/cpu.o
+    cryptopp/obj/cpu.o \
+    cryptopp/obj/pbkdf2.o
 
 ifdef USE_UPNP
 	LIBS += $(DEPSDIR)/lib/libminiupnpc.a
